        etc functions to after sourcing of script, else we run into issues
        with net.* scripts that redefine them.  Better checking if scripts
        have issues or not.

        * parse.c: Use poll() rather than select() and some other cleanups.

        * parse.c: Remove the waitpid() call in the read/write loop of our
        generate_stage2(), as its very slow on amd64.

05 Sep 2005 Martin Schlemmer <azarah@gentoo.org>

        * parse.c: Make sure field in parse_cache() is not used uninitialized.

        * misc.h: Remove the unused COUNT_CHAR_* macro's.

        * depend.c: Add missing debugging info.

26 Jul 2005 Martin Schlemmer <azarah@gentoo.org>

        * depend.c
        * depend.h
        * parse.c
        * parse.h: Remove the "parallel" stuff, as we do not use it anymore.

15 Apr 2005 Martin Schlemmer <azarah@gentoo.org>

        * parse.c: Do not source rc.conf for every script - once is enough.

14 Apr 2005 Martin Schlemmer <azarah@gentoo.org>

        * depscan.c: Update error comments for stage name changes some time
        back.

        * parse.c,
        * parse.h: Do not try to extract the depend() function from the
        scripts, but rather source the whole file.  This way we can detect
        syntax errors, etc.  Little bit slower, but not much.

07 Apr 2005 Martin Schlemmer <azarah@gentoo.org>

        * test-regex.c: Add two more tests.

        * depscan.c
        * misc.c
        * misc.h: Add basic klibc support.  I need to add a mkstemp
        implementation to get it done properly.

12 Mar 2005 Martin Schlemmer <azarah@gentoo.org>

        * Makefile: Also remove the tests in the clean target.

11 Mar 2005 Martin Schlemmer <azarah@gentoo.org>

        * test-regex.c: Add a few strings and patterns.  Enable tests to
        specify if they should fail or pass.

10 Mar 2005 Martin Schlemmer <azarah@gentoo.org>

        * test-regex.c: New file
        * Makefile: Add check target to compile and run tests